Closed
Bug 335834
Opened 19 years ago
Closed 19 years ago
Caret turd when setting designMode on about:blank page
Categories
(Core :: Layout, defect, P3)
Core
Layout
Tracking
()
VERIFIED
FIXED
mozilla1.9alpha1
People
(Reporter: martijn.martijn, Assigned: mrbkap)
References
()
Details
(Keywords: regression, testcase)
Attachments
(1 file)
1.38 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
To reproduce:
- Open a new tab (which is empty)
- Type (copy) this javascript in the url bar: javascript:document.designMode='on'; void 0
Expected result:
Document is editable, caret is visible
Actual result:
Document is editable, caret is visible, but above the caret, I see a caret ****.
I can see this bug, using a 2006-04-28 trunk build.
I think it's a regression from bug 287813.
Assignee | ||
Comment 1•19 years ago
|
||
This patch fixes the bug by not trying to recalculate the caret's rect when the caret wants to erase. Instead, it only recalcuates the rect when the caret is about to draw. This means that we need to be fairly careful about when we move frames, and when we are moving frames we need to notify the caret sooner, not later.
Assignee: nobody → mrbkap
Status: NEW → ASSIGNED
Attachment #220455 -
Flags: superreview?(roc)
Attachment #220455 -
Flags: review?(roc)
Assignee | ||
Updated•19 years ago
|
OS: Windows XP → All
Priority: -- → P3
Hardware: PC → All
Target Milestone: --- → mozilla1.9alpha
Attachment #220455 -
Flags: superreview?(roc)
Attachment #220455 -
Flags: superreview+
Attachment #220455 -
Flags: review?(roc)
Attachment #220455 -
Flags: review+
Assignee | ||
Comment 2•19 years ago
|
||
Fix checked into trunk.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Reporter | ||
Comment 3•19 years ago
|
||
Verified fixed, using 2006-05-04 trunk build.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•