Only recalculate the caret's rect when we're not currently drawn in an attempt to avoid caret turds when we're being notified of the caret movement after the frame has already been marked dirty. bug 335834, r+sr=roc